# py_django_ninja_arch_lab

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
spec/: CONSTITUTION.md  TECH_STACK.md
src/: main.py
src/app/interface/: i_email_dispatcher.py  i_order_repo.py  i_product_repo.py  i_user_repo.py
src/app/order/: create_order_use_case.py  get_order_use_case.py  list_orders_use_case.py  mock_payment_use_case.py  mock_send_email_use_case.py
src/app/product/: product_use_case.py
src/app/use_case/: create_order_use_case.py  list_orders_use_case.py  mock_payment_use_case.py  mock_send_email_use_case.py  product_use_case.py
src/app/user/: manager.py
src/domain/aggregate/: order_aggregate.py
src/domain/domain_event/: order_domain_event.py
src/domain/entity/: order_entity.py  product_entity.py  user_entity.py
src/domain/enum/: order_status.py  product_status.py  user_role_enum.py
src/domain/order/: order_aggregate.py  order_repo.py
src/domain/product/: product_repo.py
src/domain/user/: user_model.py  user_repo.py
src/driven_adapter/: models.py
src/driven_adapter/auth/: __init__.py  user_manager.py
src/driven_adapter/migrations/: 0001_initial.py
src/driven_adapter/model/: order_model.py  product_model.py  user_model.py
src/driven_adapter/order/: order_repo_impl.py
src/driven_adapter/product/: product_model.py  product_repo_impl.py
src/driven_adapter/repo/: get_user_db.py  order_repo_impl.py  product_repo_impl.py  user_repo_impl.py
src/driven_adapter/user/: get_user_db.py  user_repo_impl.py
src/driving_adapter/http_controller/: order_controller.py  product_controller.py  user_controller.py
src/driving_adapter/order/: order_controller.py
src/driving_adapter/product/: product_controller.py
src/driving_adapter/user/: user_controller.py
src/order/domain/: order_aggregate.py  order_entity.py
src/order/infra/: order_model.py  order_repo_impl.py
src/order/port/: order_controller.py
src/order/use_case/: create_order_use_case.py  get_order_use_case.py  mock_payment_use_case.py  mock_send_email_use_case.py
src/platform/: apps.py  asgi.py  settings.py  urls.py
src/platform/alembic/: env.py
src/platform/config/: api.py  asgi.py  di.py  env_config.py  settings.py  urls.py
src/platform/constant/: path.py  route_constant.py
src/platform/db/: db_setting.py  unit_of_work.py
src/platform/exception/: exception_handler.py  exception_handlers.py
src/platform/logging/: generator_wrapper.py  loguru_io.py  loguru_io.pyi  loguru_io_config.py  loguru_io_utils.py
src/platform/migrations/: 0001_initial.py
src/platform/models/: __init__.py  models.py  order_model.py  product_model.py  user_model.py
src/platform/notification/: mock_email_dispatcher.py
src/platform/service/: jwt_auth_service.py  mock_email_service.py  role_auth_service.py  unit_of_work.py
src/product/infra/: product_repo_impl.py
src/product/port/: product_controller.py
src/product/use_case/: product_use_case.py
src/user/domain/: user_model.py
src/user/infra/: get_user_db.py  user_repo_impl.py
src/user/port/: user_controller.py
src/user/use_case/: manager.py
test/: conftest.py
test/order/: __init__.py  fixtures.py
test/order/integration/: given.py  test_order_cancellation.py  test_order_creation.py  test_order_list.py  test_order_payment.py  then.py  when.py  (+2 more)
test/platform/: then.py
test/product/: __init__.py  fixtures.py
test/shared/: fakes.py  utils.py
test/user/: __init__.py
tests/: conftest.py
tests/order/: __init__.py
tests/platform/: given.py
tests/product/: __init__.py
(+61 files in other folders)
